deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sabnzbd
  labels:
    app: sabnzbd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sabnzbd
  template:
    metadata:
      labels:
        app: sabnzbd
    spec:
      containers:
      - name: sabnzbd
        image: jmeritt/sabnzbd
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "100m"
            memory: "300Mi"
          limits:
            cpu: "300m"
            memory: "512Mi"
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: config
          mountPath: /config
        - name: downloads
          mountPath: /downloads
      volumes:
      - name: config
        emptyDir: {}
      - name: config-src
        configMap: 
          name: sabnzbd-config
      - name: downloads
        emptyDir: {}
