service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
  labels:
    app: sabnzbd
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: sabnzbd
